@@ -2,6 +2,9 @@
 
 Changes with Apache 2.3.14
 
+  *) mod_proxy_ajp: Respect "reuse" flag in END_REPONSE packets.
+     [Rainer Jung]
+
   *) mod_proxy: enable absolute URLs to be rewritten with ProxyPassReverse,
      e.g. to reverse proxy "Location: https://other-internal-server/login"
      [Nick Kew]
